# GraphicEngine

./: CMakeLists.txt  README.md  imgui.ini  old_Makefile
src/Headers/: Application.h
src/Headers/Core/Camera/: FPSCamera.h  OrbitCamera.h
src/Headers/Core/Common/: Common.h  ErrorHandling.h  OpenGLHelper.h
src/Headers/Core/IndexBuffer/: IndexBuffer.h
src/Headers/Core/Mesh/: Mesh.h
src/Headers/Core/Model/: Model.h
src/Headers/Core/Renderer/: RendererWrapper.h
src/Headers/Core/Shader/: Shader.h
src/Headers/Core/ShaderProgram/: ShaderProgram.h
src/Headers/Core/Texture/: Texture.h
src/Headers/Core/TextureManager/: TextureManager.h
src/Headers/Core/VertexArray/: VertexArray.h
src/Headers/Core/VertexBuffer/: VertexBuffer.h
src/Headers/Core/VertexBufferLayout/: VertexBufferLayout.h
src/Headers/ImGui/: ImGuiLayer.h
src/Headers/Scene/: Scene.h  SceneManager.h
src/Main/: main.cpp
src/Main/Scenes/: ScenesCollection.h
src/Main/Scenes/BasicDiffuseMapScene/: BasicDiffuseMapScene.h
src/Main/Scenes/BasicDirectionalLightScene/: BasicDirectionalLightScene.h
src/Main/Scenes/BasicFlashlightScene/: BasicFlashlightScene.h
src/Main/Scenes/BasicMaterialScene/: BasicMaterialScene.h
src/Main/Scenes/BasicMultipleLightsScene/: BasicMultipleLightsScene.h
src/Main/Scenes/CatCubes3DScene/: CatCubes3DScene.h
src/Source/ImGui/: ImGuiLayer.cpp
theory/: 01_instanced_rendering.md  02_shadow_mapping.md  03_framebuffer_post_processing.md  04_frustum_culling.md  05_orbit_camera.md  06_application_refactoring.md  06_dynamic_terrain_generation.md  OVERVIEW.md
(+44 files in other folders)
